--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +16,7 @@
     "socket.io": "^4.7.4"
   },
   "devDependencies": {
+    "@types/node": "^20.11.20",
     "nodemon": "^3.0.3"
   }
 }
