--- a/server/package.json
+++ b/server/package.json
@@ -3,11 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc",
+    "lint": "tsc",
+    "build": "esbuild src/index.ts --bundle --platform=node --outfile=dist/index.js --format=esm",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts"
+    "dev:tsc": "tsc --watch --preserveWatchOutput",
+    "dev:node": "node --watch dist/index.js",
+    "dev:esbuild": "npm run build --watch",
+    "dev": "run-p dev:*"
   },
   "author": "",
   "license": "ISC",
@@ -21,9 +26,10 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^20.11.24",
+    "@types/node": "^20.11.25",
+    "esbuild": "^0.20.1",
     "nodemon": "^3.1.0",
-    "ts-node": "^10.9.2",
+    "npm-run-all": "^4.1.5",
     "typescript": "^5.3.3"
   }
 }
